2000-10-15  Diego Novillo  <dnovillo@cygnus.com>

	* intel.s, intel.d: Add new tests for naked registers using intel
	syntax.

2000-09-29  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/regprefix-err-1.s, gas/cris/rd-regprefix-1.s,
	gas/cris/rd-regprefix-1.d, gas/cris/rd-regprefix-1b.d,
	gas/cris/us-err-1.s, gas/cris/us-err-2.s, gas/cris/us-err-3.s: New.
	* gas/cris/cris.exp: Loop run_dump_test over files matching rd-*.d.

2000-09-28  Alan Modra  <alan@linuxcare.com.au>

	* gas/hppa/parse/parse.exp: Replace "hppa*w-*-*" with "hppa*64*-*-*"
	* gas/hppa/reloc/reloc.exp: Likewise.
	* gas/hppa/unsorted/unsorted.exp: Likewise.

	* gas/hppa/reloc/reduce.s: Modify .PARAM so we need an arg reloc.

2000-09-22  Jim Wilson  <wilson@cygnus.com>

	* gas/ia64/opc-f.pl: Add missing fcmp and fpcmp tests.
	* gas/ia64/opc-f.s, gas/ia64/opc-f.d: Regenerate.

	* gas/ia64/dv-raw-err.s: Add new testcases for PR%, 16 - 62.
	* gas/ia64/dv-waw-err.s: Likewise.
	* gas/ia64/dv-imply.d: Regenerate.
	* gas/ia64/dv-mutex.d, gas/ia64/dv-raw-err.l, gas/ia64/dv-safe.d,
	gas/ia64/dv-srlz.d, gas/ia64/dv-war-err.l, gas/ia64/dv-waw-err.l,
	gas/ia64/opc-f.d, gas/ia64/opc-i.d, gas/ia64/opc-m.d: Likewise.

2000-09-14  Timothy Wall  <twall@cygnus.com>

	* gas/ia64/dv-waw-err.[sl]: Additional tests for parallel
	comparisons which should and should not produce DVs.

2000-09-05  Alan Modra  <alan@linuxcare.com.au>

	* gas/vtable/vtable.exp: Re-enable for hppa-elf.

2000-08-29  Timothy Wall  <twall@cygnus.com>

        * gas/ia64/dv-mutex.s: Add stop to avoid DV error on cmp.eq.
        * gas/ia64/dv-mutex.d: Update regexp pattern.
        * gas/ia64/dv-entry-err.s: Add stop to avoid DV error on cmp.eq.
        * gas/ia64/dv-imply.s: Add stops to avoid DV errors on cmp.REL.
        Test still fails due to insn opcode pattern changes.
	
2000-08-21  H.J. Lu <hjl@gnu.org>

	* gas/all/cofftag.d: Support the strict COFF.

2000-08-16  Jim Wilson  <wilson@cygnus.com>
